ajout du lien vers la messagerie au clic sur contact dans le footer + correction bugs coeurs version tablette et mobile

--- a/style.css
+++ b/style.css
@@ -299,6 +299,41 @@
         padding-top: 0;
     }
 
+    .logo_coeur {
+        position: relative;
+    }
+
+    .heart-empty {
+        z-index: 1;
+        margin-top: -1px;
+
+    }
+
+    .heart-full {
+        position: absolute;
+        margin-top: -1px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: 0;
+        transition: opacity 500ms ease-in-out;
+    }
+
+    .heart-full:hover {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: 1;
+        transition: opacity 800ms ease-in-out;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        background-image: linear-gradient(to bottom, #9356DC,#FF79DA );
+    }
+
     /*==================================Page_menu===========================  */
 
     .fa-arrow-left {
@@ -527,9 +562,7 @@
             transform: rotate(0deg);
         }
         100% {
-            transform: rotate(360deg);
-            opacity: 0;
-        
+            transform: rotate(360deg);      
         }
     }
 
@@ -748,6 +781,38 @@
 
     .logo_ajoute {
         display: none;
+    }
+
+    .logo_coeur {
+        position: relative;
+    }
+
+    .heart-empty {
+        z-index: 1;
+    }
+
+    .heart-full {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: 0;
+        transition: opacity 500ms ease-in-out;
+    }
+
+    .heart-full:hover {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        opacity: 1;
+        transition: opacity 800ms ease-in-out;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        background-image: linear-gradient(to bottom, #9356DC,#FF79DA );
     }
 
     /*==================================Page_menu===========================  */
@@ -1210,7 +1275,7 @@
         left: 0;
         right: 0;
         opacity: 0;
-        transition: opacity 300ms ease-in-out;
+        transition: opacity 500ms ease-in-out;
     }
 
     .heart-full:hover {
@@ -1220,7 +1285,7 @@
         left: 0;
         right: 0;
         opacity: 1;
-        transition: opacity 350ms ease-in-out;
+        transition: opacity 800ms ease-in-out;
         color: transparent;
         background-clip: text;
         -webkit-background-clip: text;
@@ -1465,5 +1530,9 @@
         color: white;
         font-size: 12px;
         margin-right: 15px;
+    }
+
+    .contact_form {
+        display: none;
     }
 }
